# Backend

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package-lock.json
backend/: .dockerignore  .env.example  .eslintrc.cjs  .gitattributes  .gitignore  .prettierignore  Dockerfile  LICENSE  README.md  TEST-RESULTS.md  build-contract-optimized.js  build-rust-contract.js  deploy-contract.js  fly.toml  openapi.yaml  package-lock.json  package.json  render.yaml  server.js  start-server-with-credentials.sh  test-compile.ps1  test-endpoints-simple.sh  test-subaccount-deploy.ps1  test-wsl-endpoints.sh
backend/'~/.npm-global'/: wasm-as  wasm-as.cmd  wasm-as.ps1  wasm-ctor-eval  wasm-ctor-eval.cmd  wasm-ctor-eval.ps1  wasm-dis  wasm-dis.cmd  wasm-dis.ps1  wasm-merge  wasm-merge.cmd  wasm-merge.ps1  wasm-metadce  wasm-metadce.cmd  wasm-metadce.ps1  wasm-opt  wasm-opt.cmd  wasm-opt.ps1  wasm-reduce  wasm-reduce.cmd  wasm-reduce.ps1  wasm-shell  wasm-shell.cmd  wasm-shell.ps1  wasm2js  wasm2js.cmd  wasm2js.ps1
backend/base-project/: Cargo.toml
backend/base-project/src/: lib.rs
backend/docs/: openapi.yaml
backend/scripts/: start-server-with-credentials.sh  test-wsl-endpoints.sh
backend/src/: app.js  index.js  server.js
backend/src/config/: cors.js  index.js
backend/src/controllers/: compileController.js  deployController.js  deployJsController.js  healthController.js
backend/tests/: compile-validation.test.js  contract-validation.test.js  deploy-validation.test.js  health.test.js
frontend/: README.md  index.html
src/components/: ExampleDetail.jsx
(+30 files in other folders)
